--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "main": "main.js",
   "scripts": {
-    "start": "node main.js"  },
+    "start": "node main.js"
+  },
   "dependencies": {
+    "http-status-codes": "^2.2.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/hjhilden/tides-serve"
