--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node main.js"
   },
   "dependencies": {
+    "fetch": "^1.1.0",
     "http-status-codes": "^2.2.0"
   },
   "devDependencies": {},
