--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "node main.js"
   },
   "dependencies": {
-    "fetch": "^1.1.0",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "node-fetch": "^2.0.0"
   },
   "devDependencies": {},
   "repository": {
